ocp4/green-ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: green-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/server-snippets: |
            add_header x-nginx-ingress $hostname;
spec:
  rules:
  - host: green.ingress.dc1.example.com
    http:
      paths:
      - backend:
          serviceName: node-green
          servicePort: 80
